# types2json

./: .bumpversion.cfg  README.md  pyproject.toml
.github/workflows/: CI.yaml
types2json/: __init__.py  main.py
types2json/tests/: base_test.py  classes.py  test_types2json.py  type_test.py
